--- a/firebase.json
+++ b/firebase.json
@@ -22,20 +22,30 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "headers": [
       {
         "source": "**/*.@(html)",
-        "headers": [{
-          "key": "Cache-Control",
-          "value": "no-cache, no-store, must-revalidate"
-        }]
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
       },
       {
         "source": "**/*.@(js|css)",
-        "headers": [{
-          "key": "Cache-Control",
-          "value": "no-cache, no-store, must-revalidate"
-        }]
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
       }
     ]
   }
