--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "firebase": "^10.7.0",
+    "mixpanel-browser": "^2.48.1",
     "sirv-cli": "^2.0.0",
     "svelte-routing": "^2.9.0",
     "svelte-spa-router": "^3.3.0"
